# natID

./: .gitignore  ChangeLog.txt  Doxyfile  Doxyfile.txt  README.md
.github/workflows/: doxygen.yml
Work/Common/Regionals/: FR.xml  JP.xml  KO.xml  TR.xml  ZH.xml
Work/Common/ResConfigs/: natGUI.xml  natPlot.xml  natRep.xml
Work/Common/Sounds/: ReadMe.txt.txt
Work/CppProjects/LecturesAI/D_DP04_LIS/: CMakeLists.txt
Work/CppProjects/LecturesAI/D_DP04_LIS/src/: main.cpp
Work/DevEnv/: Common.cmake  DataProvider.cmake  MatrixLib.cmake  SymbComp.cmake  ZipperLib.cmake  natCode.cmake  natGL.cmake  natGUI.cmake  natPlot.cmake  natRpt.cmake  netOp.cmake
Work/DevEnv/QtCreatorDebugger/: tdQtCreator_unix.py
Work/DevEnv/VSCodeDebugger/: debugHelper_unix.py  settings.json
Work/DevEnv/VSDebugger/: ReadMe.txt  td.natvis
natID.RAMDisk/: ReadMe.txt
natID.SDK/DevEnv/: Common.cmake  Common_OLD.cmake  DataProvider.cmake  GLSL2Metal.py  GtkGL.cmake  License.txt  MatrixLib.cmake  SymbComp.cmake  VulkanGTK.cmake  ZipperLib.cmake  modSolver.cmake  natCode.cmake  natGL.cmake  natGLX.cmake  natGUI.cmake  natPlot.cmake  natRpt.cmake  netOp.cmake
natID.Utils/: createSymlink.py  plotTable.py
natID.Utils/linux/: SetupCollector  createSymlink.sh  listRPaths.sh  listUsedLibs.sh
natID.Utils/macOS/: ReadMe.txt  checkSignatures.py  createAllDemoSetups.command  fixDylibs.sh  fixOLDDylibs.sh  listRPaths.sh  listUsedLibs.sh  signAdHoc.sh
natID.Utils/windows/: createAllDemoSetups.bat  createSymlink.ps1
other_bin/: ReadMe.txt
other_bin/myLib/: ReadMe.txt
(+2691 files in other folders)
